codex-rs/core/tests/suite/snapshots/all__suite__mcp_tool_exposure__deferred_tools_initial_unchanged_and_removed.snap
---
source: core/tests/suite/mcp_tool_exposure.rs
expression: "format_labeled_requests_snapshot(\"Initially available deferred tools remain unchanged until disabling Calendar removes them.\",\n&[(\"Initially available\", &requests[0]),\n(\"Unchanged follow-up\", &requests[1]), (\"Removed and empty\", &requests[2]),],)"
---
Scenario: Initially available deferred tools remain unchanged until disabling Calendar removes them.

## Window 1
-- request 1 (turn; Initially available) --
00:message/developer[5]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <USAGE_STATS_INSTRUCTIONS>
    [03] <PROJECT_AUTOMATION_INSTRUCTIONS>
    [04] <APPS_INSTRUCTIONS>
    [05] <tools>
        Deferred tool namespaces:
        - mcp__codex_apps__calendar: Plan events and manage your calendar.
        </tools>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    inspect initially available deferred tools
-- request 2 (turn; Unchanged follow-up) --
03:message/assistant:
    done
04:message/user:
    inspect unchanged deferred tools

## Window 2 (after request 2: settings changed (tools))
-- request 3 (turn; Removed and empty) --
00:message/developer[5]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <USAGE_STATS_INSTRUCTIONS>
    [03] <PROJECT_AUTOMATION_INSTRUCTIONS>
    [04] <APPS_INSTRUCTIONS>
    [05] <tools>
        Deferred tool namespaces:
        - mcp__codex_apps__calendar: Plan events and manage your calendar.
        </tools>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    inspect initially available deferred tools
03:message/assistant:
    done
04:message/user:
    inspect unchanged deferred tools
05:message/assistant:
    done
06:message/developer:
    <tools>
    Removed deferred tool namespaces:
    - mcp__codex_apps__calendar: Plan events and manage your calendar.
    No deferred tool namespaces remain.
    </tools>
07:message/user:
    inspect removed deferred tools
